<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Communities Win</string>
    <string name="txt_safe_users">"_ / - contacts are safe. "</string>
    <string name="tab_friends_text_1">MY STATUS</string>
    <string name="tab_friends_text_2">CONNECTION</string>
    <string name="tab_friends_text_3">INVITE</string>
    <string name="tab_others_text_1">STATS</string>
    <string name="tab_others_text_2">WELFARE</string>
    <string name="tab_others_text_3">HELPLINE</string>
    <string name="txt_add_needs">L</string>
    <string name="add_pin_code">Enter your pin code</string>
    <string name="txt_save_pin_code">Use pin code</string>
    <string name="help_stop_c">Help stop Corona virus</string>
    <string name="without_for">without forget your</string>
    <string name="friends">Friends</string>
    <string name="grocery">Grocery</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="otp">OTP</string>
    <string name="send">Send</string>
    <string name="menu_txt_friends">FRIENDS</string>
    <string name="menu_txt_grocery">GROCERY</string>
    <string name="menu_txt_others">OTHERS</string>
    <string name="privacy_message">I accept the \"Communities Win\" privacy policy.</string>
    <string name="accept_privacy_policy">Please accept privacy policy first.</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="yes">Yes</string>
    <string name="user_message">App will read and upload this device contacts anonymously. Do you want to continue?</string>
    <string name="no">No</string>
    <string name="please_wait">Loading the contact list. Please wait.</string>
    <string name="enter_mobile_number">Enter correct mobile number</string>
    <string name="vendor_profile_name">Store or Business Name</string>
    <string name="vendor_profile_street_pin">City Pin Street Building State Country</string>
    <string name="vendor_profile_demand">Demand</string>
    <string name="vendor_profile_orders">Orders</string>
    <string name="vendor_profile_heading_category">Category</string>
    <string name="vendor_profile_heading_price">Product with Price</string>
    <string name="vendor_profile_vegetables">Vegetables</string>
    <string name="vendor_profile_fruits">Fruits</string>
    <string name="vendor_grocery_home_delivery">Home Delivery</string>
    <string name="available_from">available from</string>
    <string name="vendor_grocery_pickup">Store Pickup</string>
    <string name="vendor_profile_to">to</string>
    <string name="vendor_profile_precautions">Precaution</string>
    <string name="vendor_profile_timing">Timing</string>
    <string name="add_vendor_nam">Add your store name</string>
    <string name="sel_business_category_name">Business categories:</string>
    <string name="txt_sav_vendor_basics">Update Details</string>
    <string name="txt_item_name">Item Name</string>
    <string name="txt_selling_price">Selling price in &#8377;</string>
    <string name="txt_min_quantity">Min Qty</string>
    <string name="txt_quantity_unit">gms</string>
    <string name="btn_save_item">Update product details</string>
    <string name="rs">&#8377;</string>
    <string name="vendor_profile">per</string>
    <string name="update_precautions">Update Precautions Information</string>
    <string name="txt_Social_distancing">Social Distancing space available</string>
    <string name="txt_fever_screen">Fever Screening done </string>
    <string name="txt_quarantine_check">Quarantine Patient Stamp Checking done</string>
    <string name="txt_Sanitizer">Hand Sanitizer available</string>
    <string name="txt_pay_hands_free">Contact less (UPI/Wallet Barcode) Payments available</string>
    <string name="txt_delivery_available">Delivery Available ( DA ) in Pin Code</string>
    <string name="txt_delivery_available_sht">DA</string>
    <string name="txt_up_to_time">Time UpTo</string>
    <string name="txt_from_time">Time From</string>
    <string name="txt_Pickup_available">Order Pickup from Store Available</string>
    <string name="enter_vendor_name">Enter business name</string>
    <string name="select_atleast_one_category">Select atleast one category.</string>
    <string name="enter_vendor_pincode">Enter business pincode</string>
    <string name="enter_item_selling_price">Enter selling price</string>
    <string name="enter_item_min_qty">Enter minimum quantity</string>
    <string name="business_name_here">Add your store name here</string>
    <string name="updating_business_details">Updating your store/business details</string>
    <string name="getting_available_products">Getting available product list.</string>
    <string name="txt_select_item_to_update">Select a product from list</string>
    <string name="select_correct_unit">Select correct unit</string>
    <string name="vendor_registered">Updated vendor details</string>
    <string name="update_product_price">Updated product details</string>
    <string name="update_vendor_safety_feature">Updated vendor facilities</string>
    <string name="select_atleast_one_feature">To update check at least one feature</string>
    <string name="registering_you">Registration in process. Please wait!!</string>
    <string name="vendor_details_update">Vendor Details Update</string>
    <string name="sell_products">Sell groceries as vendor</string>
    <string name="getting_vendor_details">Getting existing profile</string>
    <string name="no_vendor_data_available">No vendor information available.</string>
    <string name="make_a_list">Make A List</string>
    <string name="browse">Browse</string>
    <string name="order">Order</string>
    <string-array name="country_name_array">
        <item>India</item>
        <item>Nepal</item>
    </string-array>
    <string-array name="i_am_safe">
        <item>I am Safe</item>
    </string-array>
    <string-array name="weight_units">
        <item>unit</item>
        <item>kg</item>
        <item>gm</item>
        <item>dozen</item>
        <item>count</item>
    </string-array>
    <string name="title_activity_make_a_list">MakeAListActivity</string>
    <string name="make_a_list_tab_text_1">VEGGIES</string>
    <string name="make_a_list_tab_text_2">FRUITS</string>
    <string name="make_a_list_tab_text_3">LISTS</string>
    <string name="invite_vendor">Invite vendor</string>
    <string name="add_item">Add items</string>
    <string name="items">ITEMS</string>
    <string name="qty">QTY</string>
    <string name="unit">UNIT</string>
    <string name="upload_the_user_list">Send your list to vendors.</string>
    <string name="upload_the_list_response_success">Your list is uploaded.</string>
    <string name="sr_no">No.</string>

    <string name="title_activity_app_home">Communities Win</string>
    <string name="tab_text_1">BUY</string>
    <string name="tab_text_2">SELL</string>
    <string name="tab_text_3">PROFILE</string>
    <string name="your_location">Your location</string>
    <string name="location_rationale_message">To display online shops available near to you on the map, app requires your location.</string>
    <string name="enable_permission">Give permission now</string>
    <string name="pin_code">Use pin code</string>
    <string name="location_permission_title">Required your location</string>
    <string name="exit_app">Close app</string>
    <string name="enter_user_contact">Enter your mobile number</string>
    <string name="login">Login</string>
    <string name="vendor_registration_info">If you are shop owner and wanted to sell products, press \"Register As Vendor\" button below</string>
    <string name="edit">Edit</string>
    <string name="demands">- \nDemands</string>
    <string name="orders">- \nOrders</string>
    <string name="add_more"><![CDATA[add more >>]]></string>
    <string name="store_address">Your address:</string>
    <string name="your_store_name">Your store name</string>
    <string name="your_store_address">Your store address</string>
    <string name="update_location">Update location</string>
    <string name="loading_vendor_near_to_you">Populating vegetable shops near to you.</string>
</resources>
