<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_background_inset">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_vendor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:maxLength="100"
            android:hint="@string/business_name_here"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#C000"
        android:text="@string/store_address"/>
    <TextView
        android:id="@+id/tv_vendor_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="#B000"/>
    <Button
        android:id="@+id/btn_get_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:drawableStart="@drawable/outline_gps_fixed_black_18"
        android:text="@string/update_location"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#C000"
            android:text="@string/sel_business_category_name" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <ToggleButton
                android:id="@+id/ib_businessCategoryVegetables"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/vendor_profile_vegetables"
                android:textOn="@string/vendor_profile_vegetables"
                tools:ignore="ContentDescription" />
            <ToggleButton
                android:id="@+id/ib_businessCategoryFruits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/vendor_profile_fruits"
                android:textOn="@string/vendor_profile_fruits"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sav_vendor_basics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sav_vendor_basics"
        android:layout_gravity="end"/>
</androidx.appcompat.widget.LinearLayoutCompat>