<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_background_inset">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:text="@string/txt_select_item_to_update" />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/parent1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_product_image"
            android:layout_width="64dp"
            android:layout_height="64dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_product_name"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

   <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_add_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_selling_price"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/txt_selling_price"
            android:ems="10"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/vendor_profile"
            android:layout_marginHorizontal="4dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_itm_min_ord_qty"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/txt_min_quantity"
            android:ems="10"
            android:inputType="number" />
        <Spinner
            android:id="@+id/spinner_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save_product_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_item" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"/>
</androidx.appcompat.widget.LinearLayoutCompat>