<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1000">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin">
        <androidx.cardview.widget.CardView
            android:id="@+id/parent1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/card_vertical_margin"
            app:cardElevation="0dp">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_ven_nam"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vendor_profile_name"
                android:textSize="18sp"
                android:onClick="openVendorBusinessNameDialog"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/parent2"
            android:layout_below="@+id/parent1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_vertical_margin"
            app:cardElevation="0dp">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_ven_loc"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vendor_profile_street_pin"
                android:textSize="18sp"
                android:onClick="openCityPinDialog"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/parent3"
            android:layout_below="@+id/parent2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_vertical_margin"
            app:cardElevation="0dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_profile"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:text="@string/vendor_profile_demand"
                    android:textSize="16sp"
                    android:onClick="openDemandsDialog"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_orders"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/vendor_profile_orders"
                    android:textSize="16sp"
                    android:onClick="openOrdersDialog"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/parent4"
            android:layout_below="@+id/parent3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vendor_profile_heading_category"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/vendor_profile_heading_price"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/card_vertical_margin">
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:onClick="clickedAddFruitsCard"
                        android:gravity="center_horizontal">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="76dp"
                            android:layout_height="76dp"
                            android:src="@drawable/fruits" />
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/vendor_profile_fruits"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_fruits"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                        android:layout_gravity="center_vertical|right"
                        android:textSize="36sp"
                        android:foreground="#8000"
                        tools:ignore="RtlHardcoded" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/card_vertical_margin">
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:onClick="clickedAddVegetablesCard"
                        android:gravity="center_horizontal">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="84dp"
                            android:layout_height="84dp"
                            android:src="@drawable/vegetables" />
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/vendor_profile_vegetables"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_vegetables"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                        android:layout_gravity="center_vertical|right"
                        android:foreground="#8000"
                        android:textSize="36sp"
                        tools:ignore="RtlHardcoded" />
                </androidx.cardview.widget.CardView>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/parent5"
            android:layout_below="@+id/parent4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/card_vertical_margin"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_delivery_type_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vendor_grocery_home_delivery" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/available_from" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_time_from_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vendor_profile_to" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_time_to_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/parent6"
            android:layout_below="@+id/parent5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/card_vertical_margin"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_delivery_type_pickup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vendor_grocery_pickup" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/available_from" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_time_from_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vendor_profile_to" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_time_to_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/parent7"
            android:layout_below="@+id/parent6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_vertical_margin"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_precautions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vendor_profile_precautions"
                android:onClick="openVendorPrecautionsDialog"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_timings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="openVendorTimingDialog"
                android:text="@string/vendor_profile_timing" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>
    <include layout="@layout/progress_layout"/>
</RelativeLayout>